fixed merge conflicts with temp

--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -24,7 +24,7 @@
       </div>
 
       <!-- COLUMN 2 - BRIEF ABOUT THE COMPANY-->
-      <div class="col-lg-4 col-md-4 column">
+      <div class="col-lg-8 col-md-8 column">
         <p class="wow fadeInUp animated" data-wow-offset="30" data-wow-duration="1.5s" data-wow-delay="0.15s">
           For those of you just joining us, welcome to your new home! We hope you’re psyched about the upcoming school year with us - McGill University is such a dynamic campus, and we’re happy to be navigating it with you. We hope you’ll grow to love our community as much as we do.
 
@@ -33,54 +33,45 @@
       </div>
 
       <!-- COLUMN 1 - SKILSS-->
-      <div class="col-lg-4 col-md-4 column">
-        <div class="item html">
-          <h2>HTML</h2>
+      <!--<div class="col-lg-4 col-md-4 column">-->
 
-        </div>
+        <!--<ul class="skills wow fadeInRight animated" data-wow-offset="30" data-wow-duration="1.5s" data-wow-delay="0.15s">-->
 
-        <div style="width: 160px; height: 160px;">
-          <
+          <!--&lt;!&ndash; SKILL ONE &ndash;&gt;-->
+          <!--<li class="skill">-->
+            <!--<div class="skill-count">-->
+              <!--<input type="text" value="58" data-thickness=".2" class="skill1">-->
+            <!--</div>-->
+            <!--<h6>Party</h6>-->
+          <!--</li>-->
 
-        </div>
+          <!--&lt;!&ndash; SKILL TWO &ndash;&gt;-->
+          <!--<li class="skill">-->
+            <!--<div class="skill-count">-->
+              <!--<input type="text" value="92" data-thickness=".2" class="skill2">-->
+            <!--</div>-->
+            <!--<h6>Laughter</h6>-->
+          <!--</li>-->
 
-        <ul class="skills wow fadeInRight animated" data-wow-offset="30" data-wow-duration="1.5s" data-wow-delay="0.15s">
+          <!--&lt;!&ndash; SKILL THREE &ndash;&gt;-->
+          <!--<li class="skill">-->
+            <!--<div class="skill-count">-->
+              <!--<input type="text" value="76" data-thickness=".2" class="skill3">-->
+            <!--</div>-->
+            <!--<h6>Foodie</h6>-->
+          <!--</li>-->
 
-          <!-- SKILL ONE -->
-          <li class="skill">
-            <div class="skill-count">
-              <input type="text" value="58" data-thickness=".2" class="skill1">
-            </div>
-            <h6>Party</h6>
-          </li>
+          <!--&lt;!&ndash; SKILL FOUR &ndash;&gt;-->
+          <!--<li class="skill">-->
+            <!--<div class="skill-count">-->
+              <!--<input type="text" value="100" data-thickness=".2" class="skill4">-->
+            <!--</div>-->
+            <!--<h6>Reason to love us</h6>-->
 
-          <!-- SKILL TWO -->
-          <li class="skill">
-            <div class="skill-count">
-              <input type="text" value="92" data-thickness=".2" class="skill2">
-            </div>
-            <h6>Laughter</h6>
-          </li>
+          <!--</li>-->
 
-          <!-- SKILL THREE -->
-          <li class="skill">
-            <div class="skill-count">
-              <input type="text" value="76" data-thickness=".2" class="skill3">
-            </div>
-            <h6>Foodie</h6>
-          </li>
-
-          <!-- SKILL FOUR -->
-          <li class="skill">
-            <div class="skill-count">
-              <input type="text" value="100" data-thickness=".2" class="skill4">
-            </div>
-            <h6>Reason to love us</h6>
-
-          </li>
-
-        </ul>
-      </div> <!-- / END SKILLS COLUMN-->
+        <!--</ul>-->
+      <!--</div> &lt;!&ndash; / END SKILLS COLUMN&ndash;&gt;-->
     </div> <!-- / END 3 COLUMNS OF ABOUT US-->
   </div> <!-- / END CONTAINER -->
 
