--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,11 +6,11 @@
 
 <app-news-banner id="news-banner"></app-news-banner>
 
-<app-events id="events"></app-events>
-
-<app-execs id="execs"></app-execs>
+<!--<app-events id="events"></app-events>-->
 
 <app-sponsors id="sponsors"></app-sponsors>
+
+<app-execs id="execs"></app-execs>
 
 <app-contact-us id="contact-us"></app-contact-us>
 
