--- a/src/app/execs/execs.component.css
+++ b/src/app/execs/execs.component.css
@@ -198,7 +198,7 @@ figure.effect-julia:hover p {
 }
 p.ser-para-wthree {
    padding: 7em 1.2em 1.2em 1.2em;
-   font-size: 0.9em;
+   font-size: 82%;
    background-color: #fff;
    line-height: 1.35em;
    color:#777;
