--- a/src/app/news-banner/news-banner.component.html
+++ b/src/app/news-banner/news-banner.component.html
@@ -8,9 +8,9 @@
 
   <!-- Wrapper for slides -->
       <div class="carousel-inner">
-        <!--<div style="background-color: rgba(0, 0, 0, 0.3);">-->
-          <div class="item active" style="background-image: url('../../assets/img/sponsors/{{sponsor.Name}}.jpg');" *ngFor="let sponsor of sponsorOfTheWeek">
+          <div class="item active" *ngFor="let sponsor of sponsorOfTheWeek">
             <a href="{{sponsor.URL}}" >
+              <img src="../../assets/img/sponsors/{{sponsor.Name}}.jpg" alt="Chania">
               <div class="carousel-caption">
                 <h3>{{sponsor.Name}}</h3>
                 <p>Get a {{sponsor.DiscountType}} with the MTSA card</p>
@@ -19,8 +19,9 @@
             </a>
           </div>
 
-          <div class="item" style="background-image: url('../../assets/img/events/{{event.Name}}.jpg');" *ngFor="let event of upcomingEvents">
+          <div class="item"  *ngFor="let event of upcomingEvents">
             <a href="{{event.EventURL}}" >
+              <img src="../../assets/img/events/{{event.Name}}.jpg" alt="Chania">
               <div class="carousel-caption">
                 <h3>{{event.Name}}</h3>
                 <p>When: {{event.StartDate}} - {{event.StartTime}} TO {{event.EndDate}} - {{event.EndTime}}</p>
@@ -28,7 +29,6 @@
               </div>
             </a>
           </div>
-        <!--</div>-->
     </div>
 
   <!-- Left and right controls -->
