--- a/src/app/sponsors/sponsors.component.css
+++ b/src/app/sponsors/sponsors.component.css
@@ -155,3 +155,37 @@
 
 }
 
+#sponsors button{
+  display: inline-block;
+  position:relative;
+  float:top;
+  border:0px;
+  border-bottom:2px solid #333;
+  width:100%;
+  background-color:transparent;
+  padding:20px 0;
+  text-transform:uppercase;
+  letter-spacing:2px;
+  margin-top: 50px;
+  margin-bottom: 20px;
+  margin-right:auto;
+
+}
+#sponsors button#submit {
+  width:auto;
+  border:2px solid;
+  padding:10px 20px;
+  display:inline-block;
+}
+#sponsors button#submit:hover {
+  background-color:#333;
+  color:#fff;
+  border:2px solid #333;
+}
+#sponsors button:focus,.portfolio button:active{
+  border-top:0px;
+  border-bottom:2px solid #323232;
+  outline:0;
+  outline: none;
+}
+
