--- a/src/app/sponsors/sponsors.component.html
+++ b/src/app/sponsors/sponsors.component.html
@@ -22,7 +22,7 @@
   </div>
 
   <a href="#sponsorsModal" class="portfolio-link" data-toggle="modal">
-    <input type="submit" id="submit" class="clearfix btn" value="View all sponsors">
+    <input type="button" id="submit" class="clearfix btn" value="View all sponsors">
   </a>
 </section>
 
