--- a/src/app/sponsors/sponsors.component.css
+++ b/src/app/sponsors/sponsors.component.css
@@ -120,7 +120,25 @@
   display: inline-block;
 }
 
-#sponsors input{
+
+#sponsors input#allSponsorBtn {
+  margin: 30px auto 20px;
+  background-color: white;
+  font-weight: bolder;
+  color: #333;
+  width:auto;
+  border:2px solid #333;
+  text-transform:uppercase;
+  padding:10px 20px;
+  display:inline-block;
+}
+#sponsors input#allSponsorBtn:hover {
+  background-color:#333;
+  color:#fff;
+  border:2px solid #333;
+}
+
+#portfolio button{
   display: inline-block;
   position:relative;
   float:top;
@@ -135,57 +153,5 @@
   margin-bottom: 20px;
   margin-right:auto;
 
-}
-#sponsors input#submit {
-  width:auto;
-  border:2px solid;
-  padding:10px 20px;
-  display:inline-block;
-}
-#sponsors input#submit:hover {
-  background-color:#333;
-  color:#fff;
-  border:2px solid #333;
-}
-#sponsors input:focus,.portfolio input:active {
-  border-top: 0px;
-  border-bottom: 2px solid #1d1d1d;
-  outline: 0;
-  outline: none;
-
-}
-
-#sponsors button{
-  display: inline-block;
-  position:relative;
-  float:top;
-  border:0px;
-  border-bottom:2px solid #333;
-  width:100%;
-  background-color:transparent;
-  padding:20px 0;
-  text-transform:uppercase;
-  letter-spacing:2px;
-  margin-top: 50px;
-  margin-bottom: 20px;
-  margin-right:auto;
-
-}
-#sponsors button#submit {
-  width:auto;
-  border:2px solid;
-  padding:10px 20px;
-  display:inline-block;
-}
-#sponsors button#submit:hover {
-  background-color:#333;
-  color:#fff;
-  border:2px solid #333;
-}
-#sponsors button:focus,.portfolio button:active{
-  border-top:0px;
-  border-bottom:2px solid #323232;
-  outline:0;
-  outline: none;
 }
 
