--- a/src/app/execs/execs.component.css
+++ b/src/app/execs/execs.component.css
@@ -26,7 +26,7 @@
 }
 .serve-agileinfo {
   display: inline-block;
-  padding: 0;
+  min-width: 160px;
   max-width: 275px;
   width: 30%;
   margin-right:2%;
@@ -45,7 +45,7 @@
   position: relative;
   float: left;
   overflow: hidden;
-  margin: 7px 1% 22px 1%;
+  margin: 7px 1% 10px 1%;
   height: auto;
   background: #323232;
   text-align: center;
@@ -198,7 +198,7 @@ figure.effect-julia:hover p {
 }
 p.ser-para-wthree {
    padding: 7em 1.2em 1.2em 1.2em;
-   font-size: 82%;
+   font-size: 85%;
    background-color: #fff;
    line-height: 1.35em;
    color:#777;
@@ -208,10 +208,18 @@ p.ser-para-wthree {
 p.ser-para-wthree#execName {
   padding: 0.5em 0;
   font-weight:400;
-  font-size: 1.25em;
   letter-spacing: 2px;
 }
 
 p.ser-para-wthree#execName#lastName {
   color:#f16930;
 }
+
+
+@media(min-width:768px) {
+  p.ser-para-wthree {
+    font-size: 1em;
+  }
+}
+
+
