--- a/src/app/execs/execs.component.html
+++ b/src/app/execs/execs.component.html
@@ -9,11 +9,7 @@
           <figure class="effect-julia">
             <img src="../../assets/img/execs/{{exec.imgUrl}}" alt="../../assets/img/execs/alt.jpg"/>
             <figcaption>
-              <div>
-                <p> First Fact </p> <br>
-                <p> Second Fact </p> <br>
-                <p> Third Fact </p>
-              </div>
+                <p> {{exec.Description}} </p>
               <!--<a class="scroll" href="#news">View more</a>-->
             </figcaption>
           </figure>
