--- a/src/styles.css
+++ b/src/styles.css
@@ -107,9 +107,9 @@ a:hover,a:focus {
   left:0;
   right:0;
   margin:auto;
-  border: 16px solid #f3f3f3;
+  border: 16px solid rgba(255, 255, 255, 0.55);
   border-radius: 50%;
-  border-top: 16px solid #145e58;
+  border-top: 16px solid rgba(243, 243, 243, 0.9);
   width: 200px;
   height: 200px;
   -webkit-animation: spin 2s linear infinite;
