--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,8 @@
 
 <app-sponsors id="sponsors"></app-sponsors>
 
+<app-photos id="photos"></app-photos>
+
 <app-execs id="execs"></app-execs>
 
 <app-contact-us id="contact-us"></app-contact-us>
