--- a/src/app/execs/execs.component.html
+++ b/src/app/execs/execs.component.html
@@ -1,28 +1,30 @@
 <section class="execs">
-  <div class="col-lg-12 text-center">
-    <h2 class="section-title">Execs</h2>
-  </div>
-  <div class="services" id="services">
-      <div class="grid">
-        <div class="serve-agileinfo" *ngFor="let exec of allExecs">
-          <div class="exec_portfolio">
-          <figure class="effect-julia">
-            <img src="../../assets/img/execs/{{exec.imgUrl}}" alt="../../assets/img/execs/alt.jpg"/>
-            <figcaption>
-                <p> {{exec.Description}} </p>
-              <!--<a class="scroll" href="#news">View more</a>-->
-            </figcaption>
-          </figure>
-          <p class="ser-para-wthree">
-            <span style="font-weight: bolder; font-size: larger"> {{exec.Name }}<span style="color: #f16930;"> {{exec.LastName}}</span></span>
-            <br>
-            {{ exec.Position }}
-            <br>
-            {{ exec.Major }} - {{ exec.Year }}
-          <p>
+  <!--<div style="background: rgba(0, 0, 0, 0.6)">-->
+    <div class="col-lg-12 text-center">
+      <h2 class="section-title">Execs</h2>
+    </div>
+    <div class="services" id="services">
+        <div class="grid">
+          <div class="serve-agileinfo" *ngFor="let exec of allExecs">
+            <div class="exec_portfolio">
+            <figure class="effect-julia">
+              <img src="../../assets/img/execs/{{exec.imgUrl}}" alt="../../assets/img/execs/alt.jpg"/>
+              <figcaption>
+                  <p> {{exec.Description}} </p>
+                <!--<a class="scroll" href="#news">View more</a>-->
+              </figcaption>
+            </figure>
+            <p class="ser-para-wthree">
+              <span style="font-weight: bolder; font-size: larger"> {{exec.Name }}<span style="color: #f16930;"> {{exec.LastName}}</span></span>
+              <br>
+              {{ exec.Position }}
+              <br>
+              {{ exec.Major }} - {{ exec.Year }}
+            <p>
+            </div>
           </div>
+          <!--<div class="clearfix"></div>-->
         </div>
-        <!--<div class="clearfix"></div>-->
-      </div>
-  </div>
+    </div>
+  <!--</div>-->
 </section>
