--- a/src/app/menu.component.html
+++ b/src/app/menu.component.html
@@ -20,6 +20,9 @@
           <a href="#events" class="page-scroll">Events</a>
         </li>
         <li>
+          <a href="#photos" class="page-scroll">Photos</a>
+        </li>
+        <li>
           <a href="#execs" class="page-scroll">Team</a>
         </li>
         <li>
