changed parallax background

--- a/src/app/photos/photos.component.css
+++ b/src/app/photos/photos.component.css
@@ -1,7 +1,7 @@
 .photos{
   width:100%;
   min-height: max-content;
-  background-image: url("https://www.mytaiwantour.com/blog/wp-content/uploads/2017/09/mytaiwantour_blog_Taipei-Rest-and-Relaxation-Tour-1024x445.jpg");
+  background-image: url("https://previews.123rf.com/images/pzaxe/pzaxe1309/pzaxe130900085/22386825-Vector-seamless-geometric-simple-pattern-gray-abstract-background-for-design-Stock-Vector.jpg");
   background-position: center;
   background-attachment: fixed;
   background-size: cover;
@@ -13,7 +13,7 @@
 }
 
 .section-title{
-  color:white;
+  color:black;
 }
 
 .tz-gallery {
