--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,18 @@
-<app-menu> </app-menu>
+<!--<app-menu> </app-menu>-->
 
-<app-welcome-page></app-welcome-page>
+<!--<app-welcome-page></app-welcome-page>-->
 
-<app-about-us id="about-us"></app-about-us>
+<!--<app-about-us id="about-us"></app-about-us>-->
 
-<app-news-banner id="news-banner"></app-news-banner>
+<!--<app-news-banner id="news-banner"></app-news-banner>-->
 
-<!--<app-events id="events"></app-events>-->
+<!--&lt;!&ndash;<app-events id="events"></app-events>&ndash;&gt;-->
 
-<app-sponsors id="sponsors"></app-sponsors>
+<!--<app-sponsors id="sponsors"></app-sponsors>-->
 
-<app-photos id="photos"></app-photos>
+<!--<app-photos id="photos"></app-photos>-->
 
-<app-execs id="execs"></app-execs>
+<!--<app-execs id="execs"></app-execs>-->
 
 <app-contact-us id="contact-us"></app-contact-us>
 
