--- a/src/app/contact-us/contact-us.component.css
+++ b/src/app/contact-us/contact-us.component.css
@@ -40,7 +40,7 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 .done {
-  display:none;
+  display: inline-block;
 }
 .error input,input.error,.error textarea,textarea.error {
   background-color:#ffffff;
