--- a/src/app/sponsors/sponsors.component.html
+++ b/src/app/sponsors/sponsors.component.html
@@ -21,7 +21,7 @@
     </div>
   </div>
 
-  <a href="#sponsorsModal" class="portfolio-link" data-toggle="modal">
+  <a routerLink="/sponsors" routerLinkActive="active" class="portfolio-link" data-toggle="modal">
     <input type="button" id="allSponsorBtn" class="clearfix btn"  value="View all sponsors">
   </a>
 </section>
