--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,13 @@
 
 <app-sponsors id="sponsors"></app-sponsors>
 
+<!--<section class="break">-->
+  <!--<div class="quote">-->
+
+  <!--</div>-->
+
+<!--</section>-->
+
 <app-photos id="photos"></app-photos>
 
 <app-execs id="execs"></app-execs>
