--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -15,7 +15,7 @@
             <input type="email" name="contact-email" placeholder="Your E-mail Address *">
             <input type="text" name="contact-subject" placeholder="Subject Line *">
             <textarea name="contact-text" rows="7" placeholder="Type your Message *"></textarea>
-            <input type="submit" id="submit" class="clearfix btn" value="Send" (click)="validate($event)">
+            <input type="submit" id="submit" class="clearfix btn" value="Send" (click)="validate()">
           </div>
         </form>
       </div>
