--- a/src/app/sponsors/sponsors.component.html
+++ b/src/app/sponsors/sponsors.component.html
@@ -1,4 +1,3 @@
-
 <section class="sponsors" id="sponsors">
   <div class="container">
     <div class="col-lg-12 text-center section-title">
@@ -21,7 +20,7 @@
     </div>
   </div>
 
-  <a routerLink="/sponsors" routerLinkActive="active" class="portfolio-link" data-toggle="modal">
+  <a href="#sponsorsModal" class="portfolio-link" data-toggle="modal">
     <input type="button" id="allSponsorBtn" class="clearfix btn"  value="View all sponsors">
   </a>
 </section>
